--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,11 @@
 		// Update the 'dockerFile' property if you aren't using the standard 'Dockerfile' filename.
 		"dockerfile": "../dockerfile"
 	},
-
+	"runArgs": [
+		"--runtime=nvidia",
+		"--gpus",
+		"all"
+	],
 	// Features to add to the dev container. More info: https://containers.dev/features.
 
 
