--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/docker-existing-dockerfile
 {
-	"name": "Existing Dockerfile",
+	"name": "FastDash",
 	"build": {
 		// Sets the run context to one level up instead of the .devcontainer folder.
 		"context": "..",
@@ -9,12 +9,11 @@
 		"dockerfile": "../dockerfile"
 	},
 	"runArgs": [
-		"--runtime=nvidia",
+		//"--runtime=nvidia",
 		"--gpus",
 		"all"
 	],
 	// Features to add to the dev container. More info: https://containers.dev/features.
-
 
 	"features": {},
 	
